fixed column border overflow issue

--- a/homenote/src/components/NoteBar.css
+++ b/homenote/src/components/NoteBar.css
@@ -1,6 +1,7 @@
 .NoteBar {
     float:left;
-    width: 60%;
+    width: calc(75% - 1px);
     height: 100%;
     background-color: #f6f6f6;
+    padding: none;
 }
