--- a/homenote/src/components/TaskBar.css
+++ b/homenote/src/components/TaskBar.css
@@ -3,4 +3,5 @@
     width: 25%;
     border-right: 1px solid #ddd;
     height: 100%;
+    padding: none;
 }
